--- a/rollbacks/system/sshConfig/tasks/main.yaml
+++ b/rollbacks/system/sshConfig/tasks/main.yaml
@@ -1,6 +1,12 @@
 # ansible_path/rollbacks/system/sshConfig/tasks/main.yaml
-
 ---
+- name: ROLLBACK SYSTEM SSHCONFIG | Add root authorized_keys file
+  authorized_key:
+    user: root
+    state: present
+    exclusive: True
+    key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/authorized_keys') }}"
+  tags: [rollback, ssh-config, ssh, ssh-config, ssh-authorizedKeys]
 
 - name: ROLLBACK SYSTEM SSHCONFIG | Check if there is a backup file for default ssh config
   stat:
@@ -14,7 +20,7 @@
     dest: /etc/ssh/sshd_config
     remote_src: yes
   register: isRestored
-  when: fileExists.stat.exists is defined and fileExists.stat.exists == True
+  when: fileExists is defined and fileExists.stat.exists == True
   tags: [rollback, ssh-config, restore-config]
 
 - name: ROLLBACK SYSTEM SSHCONFIG | Remove the backup file
